# ScoreManagementSystem

./: .gitignore  CMakeLists.txt  README.md  compile.bat  main.cpp  start_server.bat
conf/: server.ini
lib/sqlite/: sqlite3.h
res/public/css/: common.css
res/view/admin/: dashboard.html
res/view/common/: 404.html  login.html
res/view/teacher/: dashboard.html
res/view/user/: dashboard.html
src/config/: config.cpp  config.h
src/core/Controller/: AdminController.cpp  AdminController.h  AuthController.cpp  AuthController.h  UserController.cpp  UserController.h
src/core/Model/: CourseModel.cpp  CourseModel.h  ScoreModel.h  Scoremodel.cpp  StudentModel.cpp  StudentModel.h  TeacherModel.cpp  TeacherModel.h  UserModel.cpp  UserModel.h
src/dao/: CourseDao.cpp  CourseDao.h  ScoreDao.cpp  ScoreDao.h  StudentDao.cpp  StudentDao.h  TeacherDao.cpp  TeacherDao.h  UserDao.cpp  UserDao.h
src/network/: HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
src/service/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  StudentService.cpp  StudentService.h  TeacherService.cpp  TeacherService.h
src/utils/: Md5Utils.cpp  Md5Utils.h  SqliteUtils.cpp  SqliteUtils.h
